--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -139,7 +139,6 @@ KNOWN_ARCHES?=	aarch64/arm64 \
 		amd64 \
 		armv6/arm \
 		armv7/arm \
-		i386 \
 		mips \
 		mipsel/mips \
 		mips64el/mips \
@@ -932,7 +931,6 @@ _cleanobj_fast_depend_hack: .PHONY
 # Date      SVN Rev  Syscalls/Changes
 # Syscall stubs rewritten in C and obsolete MD assembly implementations
 # 20191009  r353340  removal of opensolaris_atomic.S (also r353381)
-.if ${MACHINE} != i386
 .for f in opensolaris_atomic
 	@if [ -e "${OBJTOP}/cddl/lib/libzpool/.depend.${f}.o" ] && \
 	    egrep -qw 'opensolaris_atomic\.S' ${OBJTOP}/cddl/lib/libzpool/.depend.${f}.o; then \
@@ -941,7 +939,6 @@ _cleanobj_fast_depend_hack: .PHONY
 		   ${LIBCOMPAT:D${LIBCOMPAT_OBJTOP}/cddl/lib/libzpool/.depend.${f}.*}; \
 	fi
 .endfor
-.endif
 # 20190925  r352689  removal of obsolete i386 memchr.S
 .for f in memchr
 	@if [ -e "${OBJTOP}/lib/libc/.depend.${f}.o" ] && \
@@ -1570,7 +1567,6 @@ _cleankernobj_fast_depend_hack: .PHONY
 		    ${OBJTOP}/sys/${KERNCONF}/.depend.assym.*; \
 	fi
 # 20191009  r353340  removal of opensolaris_atomic.S (also r353381)
-.if ${MACHINE} != i386
 .for f in opensolaris_atomic
 .for m in opensolaris zfs
 	@if [ -e "${KRNLOBJDIR}/${KERNCONF}/modules${SRCTOP}/sys/modules/${m}/.depend.${f}.o" ] && \
@@ -1580,7 +1576,6 @@ _cleankernobj_fast_depend_hack: .PHONY
 	fi
 .endfor
 .endfor
-.endif
 
 ${WMAKE_TGTS:N_worldtmp:Nbuild${libcompat}} ${.ALLTARGETS:M_*:N_worldtmp}: .MAKE .PHONY
 
@@ -2369,8 +2364,7 @@ _libmagic=lib/libmagic
 .endif
 
 .if ${MK_PMC} != "no" && \
-    (${TARGET_ARCH} == "aarch64" || ${TARGET_ARCH} == "amd64" || \
-    ${TARGET_ARCH} == "i386")
+    (${TARGET_ARCH} == "aarch64" || ${TARGET_ARCH} == "amd64"
 _jevents=lib/libpmc/pmu-events
 .endif
 
@@ -2417,7 +2411,7 @@ kernel-tools: .PHONY
 # to begin building the target binaries.
 #
 .if ${TARGET_ARCH} != ${MACHINE_ARCH} || ${BUILD_WITH_STRICT_TMPPATH} != 0
-.if ${TARGET_ARCH} == "amd64" || ${TARGET_ARCH} == "i386"
+.if ${TARGET_ARCH} == "amd64"
 _btxld=		usr.sbin/btxld
 .endif
 .endif
