--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2364,7 +2364,7 @@ _libmagic=lib/libmagic
 .endif
 
 .if ${MK_PMC} != "no" && \
-    (${TARGET_ARCH} == "aarch64" || ${TARGET_ARCH} == "amd64"
+    (${TARGET_ARCH} == "aarch64" || ${TARGET_ARCH} == "amd64")
 _jevents=lib/libpmc/pmu-events
 .endif
 
