--- a/stand/images/Makefile
+++ b/stand/images/Makefile
@@ -2,7 +2,8 @@
 
 .include <bsd.init.mk>
 
-FILES+=	freebsd-brand-rev.png freebsd-brand.png freebsd-logo-rev.png
+FILES+=	freebsd-brand-rev.png freebsd-brand.png freebsd-logo-rev.png \
+		hardenedbsd-brand-rev.png hardenedbsd-logo-rev.png
 
 FILESDIR=  /boot/images
 
