HBSD: Install bsd.sanitizer.mk
It turns out that the way FreeBSD implemented this means that it must
exist in the filesystem (/usr/share/mk) in order for ports to build
properly. So, let's do that.

Example of a ports build failure case:
http://ci-08.md.hardenedbsd.org/data/hardenedbsd-current_amd64-local/2021-08-02_16h25m18s/logs/errors/faces-1.7.7_12.log

Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>

--- a/share/mk/Makefile
+++ b/share/mk/Makefile
@@ -53,6 +53,7 @@ FILES=	\
 	bsd.progs.mk \
 	bsd.snmpmod.mk \
 	bsd.subdir.mk \
+	bsd.sanitizer.mk \
 	bsd.suffixes-posix.mk \
 	bsd.suffixes.mk \
 	bsd.symver.mk \
