--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -713,28 +713,19 @@ BSARGS= 	DESTDIR= \
 		MAKEOBJDIRPREFIX= \
 		BOOTSTRAPPING=${BOOTSTRAPPING_OSRELDATE} \
 		BWPHASE=${.TARGET:C,^_,,} \
-<<<<<<< HEAD
-		SSP_CFLAGS= \
-		MK_HTML=no NO_LINT=yes MK_MAN=no MK_MAN_UTILS=yes \
-		-DNO_PIC MK_PROFILE=no -DNO_SHARED \
-		-DNO_CPU_CFLAGS MK_WERROR=no MK_CTF=no \
-		MK_ASAN=no MK_UBSAN=no \
-		MK_CLANG_EXTRAS=yes MK_CLANG_FULL=no \
-		MK_LLDB=no MK_TESTS=no \
-		MK_INCLUDES=yes MK_CFI=no MK_RETPOLINE=no \
-		MK_CLANG_FORMAT=no MK_LTOLIB=no
-=======
 		-DNO_CPU_CFLAGS \
 		-DNO_LINT \
 		-DNO_PIC \
 		-DNO_SHARED \
 		MK_ASAN=no \
+		MK_CFI=no \
 		MK_CTF=no \
-		MK_CLANG_EXTRAS=no \
+		MK_CLANG_EXTRAS=yes \
 		MK_CLANG_FORMAT=no \
 		MK_CLANG_FULL=no \
 		MK_HTML=no \
 		MK_LLDB=no \
+		MK_LTOLIB=no \
 		MK_MAN=no \
 		MK_PROFILE=no \
 		MK_RETPOLINE=no \
@@ -744,7 +735,6 @@ BSARGS= 	DESTDIR= \
 		MK_WERROR=no \
 		MK_INCLUDES=yes \
 		MK_MAN_UTILS=yes
->>>>>>> origin/freebsd/current/main
 
 BMAKE=		\
 		${TIME_ENV} ${BMAKEENV} ${MAKE} ${WORLD_FLAGS} -f Makefile.inc1 \
@@ -762,25 +752,19 @@ TMAKE=		\
 		BWPHASE=${.TARGET:C,^_,,} \
 		-DNO_CPU_CFLAGS \
 		-DNO_LINT \
-<<<<<<< HEAD
-		-DNO_CPU_CFLAGS MK_WERROR=no MK_CTF=no \
-		MK_ASAN=no MK_UBSAN=no \
-		MK_CLANG_EXTRAS=yes MK_CLANG_FULL=no \
-		MK_LLDB=no MK_TESTS=no MK_CFI=no MK_RETPOLINE=no \
-		MK_CLANG_FORMAT=no MK_LTOLIB=no
-=======
 		MK_ASAN=no \
+		MK_CFI=no \
 		MK_CTF=no \
-		MK_CLANG_EXTRAS=no \
+		MK_CLANG_EXTRAS=yes \
 		MK_CLANG_FORMAT=no \
 		MK_CLANG_FULL=no \
 		MK_LLDB=no \
+		MK_LTOLIB=no \
 		MK_RETPOLINE=no \
 		MK_SSP=no \
 		MK_TESTS=no \
 		MK_UBSAN=no \
 		MK_WERROR=no
->>>>>>> origin/freebsd/current/main
 
 # cross-tools stage
 # TOOLS_PREFIX set in BMAKE
@@ -803,25 +787,18 @@ KTMAKE=		${TIME_ENV} \
 		OBJROOT='$${OBJTOP}/' \
 		MAKEOBJDIRPREFIX= \
 		BOOTSTRAPPING=${BOOTSTRAPPING_OSRELDATE} \
-<<<<<<< HEAD
-		SSP_CFLAGS= \
-		MK_HTML=no -DNO_LINT MK_MAN=no \
-		-DNO_PIC MK_PROFILE=no -DNO_SHARED \
-		-DNO_CPU_CFLAGS MK_WERROR=no MK_CTF=no MK_CFI=no \
-		MK_RETPOLINE=no MK_LTOLIB=no
-=======
 		-DNO_CPU_CFLAGS \
 		-DNO_LINT \
 		-DNO_PIC \
 		-DNO_SHARED \
 		MK_CTF=no \
 		MK_HTML=no \
+		MK_LTOLIB=no \
 		MK_MAN=no \
 		MK_PROFILE=no \
 		MK_SSP=no \
 		MK_RETPOLINE=no \
 		MK_WERROR=no
->>>>>>> origin/freebsd/current/main
 
 # world stage
 WMAKEENV=	${CROSSENV} \
